# DOARealTimeFaceRecognition

./: .gitignore  3rd-party-dll-debug.bat  BrianCam.py  CMakeLists.txt  README.md  RealTimeFacialRecognition.vcxproj  RealtimeFacialRecognition.sln  RealtimeFacialRecognition.vcxproj  appveyor.yml  build.bat  create.bat  delete_build.bat  high frames.py  requirements.txt  settings.conf
.circleci/: config.yml
.github/: README.md
.github/workflows/: msbuild.yml
contrib/images/: images.rar
res/: qt-resource.qrc  resource.rc
src/: CameraGui.cpp  CameraGui.h  CameraGui.ui  Main.cpp  Main.h  PCH.h  RealtimeFacialRecognition.vcxproj  Test.cpp  settings-dev.conf  settings.conf
src/CameraGui/: CameraGui.cpp  CameraGui.h  CameraGui.ui
src/Console/: Colors.h  ConsoleOutput.cpp
src/Utilities/: Utilities.cpp  Utilities.h
src/enc_temp_folder/bcd24eb9444c5ab2613b1fd3c6d65ac1/: Main.cpp
